--- a/jpashop/build.gradle
+++ b/jpashop/build.gradle
@@ -1,3 +1,10 @@
+buildscript {
+	ext {
+		queryDslVersion = "5.0.0"
+	}
+}
+
+
 plugins {
 	id 'org.springframework.boot' version '2.7.5'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
@@ -5,7 +12,7 @@ plugins {
 	id 'java'
 }
 
-//apply plugin: "com.ewerk.gradle.plugins.querydsl"
+apply plugin: "com.ewerk.gradle.plugins.querydsl"
 
 group = 'jpabook'
 version = '0.0.1-SNAPSHOT'
@@ -46,8 +53,8 @@ tasks.named('test') {
 }
 
 //querydsl 추가
-//def querydslDir = 'src/main/generated'
-def querydslDir = "$buildDir/generated/querydsl"
+def querydslDir = '$buildDir/src/main/generated'
+//def querydslDir = "$buildDir/generated/querydsl"
 querydsl {
 	library = "com.querydsl:querydsl-apt"
 	jpa = true
@@ -64,5 +71,8 @@ compileQuerydsl{
 	options.annotationProcessorPath = configurations.querydsl
 }
 configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
 	querydsl.extendsFrom compileClasspath
 }
