[UPDATE] Cache를 이용한 회원 목록 중복 쿼리 제거

--- a/jpashop/src/main/resources/application.yml
+++ b/jpashop/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
-        default_batch_fetch_size: 100  #
+        default_batch_fetch_size: 100  # 100개를 한번에 query 발사!
 
 logging:
   level:
