--- a/jpashop/build.gradle
+++ b/jpashop/build.gradle
@@ -1,3 +1,4 @@
+// 1. queryDsl version 정보 추가
 buildscript {
 	ext {
 		queryDslVersion = "5.0.0"
@@ -8,6 +9,7 @@ buildscript {
 plugins {
 	id 'org.springframework.boot' version '2.7.5'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	// 2. querydsl 추가
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 	id 'java'
 }
@@ -41,37 +43,50 @@ dependencies {
 	implementation 'junit:junit:4.13.1'
 
 	compileOnly 'org.projectlombok:lombok'
-	// runtimeOnly 'com.h2database:h2'
-	runtimeOnly 'mysql:mysql-connector-java' // ----->> 이 줄을 추가했다.
+
+	// H2
+	runtimeOnly 'com.h2database:h2'
+
+	// MYSQL
+//	 runtimeOnly 'mysql:mysql-connector-java'
+
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	implementation 'com.querydsl:querydsl-jpa'
-	implementation 'com.querydsl:querydsl-apt'
+	// 3. querydsl 추가
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+}
+
+//Querydsl 추가, 자동 생성된 Q클래스 gradle clean으로 제거
+clean {
+	delete file('src/main/generated')
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
 
-//querydsl 추가
-def querydslDir = '$buildDir/src/main/generated'
-//def querydslDir = "$buildDir/generated/querydsl"
+/*
+ * 4. queryDSL 설정 추가
+ */
+
+// querydsl 에서 사용할 경로 설정
+def querydslDir = "$buildDir/generated/querydsl"
+// JPA 사용 여부와 사용할 경로를 설정
 querydsl {
-	library = "com.querydsl:querydsl-apt"
 	jpa = true
 	querydslSourcesDir = querydslDir
 }
+// build 시 사용할 sourceSet 추가
 sourceSets {
-	main {
-		java {
-			srcDirs = ['src/main/java', querydslDir]
-		}
-	}
+	main.java.srcDir querydslDir
 }
+// querydsl 컴파일시 사용할 옵션 설정
 compileQuerydsl{
 	options.annotationProcessorPath = configurations.querydsl
 }
+// querydsl 이 compileClassPath 를 상속하도록 설정
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
